# seedServer

./: .dockerignore  .env.example  .env.public.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Caddyfile  DEMO.md  Dockerfile  Dockerfile.module-sandbox  Makefile  README.md  SOURCE_OF_TRUTH.md  TASKS.md  alembic.ini  docker-compose.dev.yml  docker-compose.public.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  seed_pantry.sql
app/: agent_sandbox_worker.py  ai_adapters.py  auth.py  billing_service.py  career_upskilling.py  cli.py  dependencies.py  dependency_check.py  diagnostic_core.py  diagnostic_session.py  key_management.py  lesson_engine.py  lesson_engine_pipeline.py  main.py  optimizer_mode.py  performance_monitor.py  prompt_testing.py  rate_limiter.py  settings.py  specialized_tests.py  worker_main.py
docs/: ACTIVE_PLATFORM_SCOPE.md  ACTIVE_REVIEW_BUCKETS_2026-05-20.md  AGENT_PLATFORM_AUDIT_2026-02-28.md  AGENT_WS_STREAMING_DISCOVERY.md  ARCHITECTURE_MAP_POST_PHASE_5.md  BATCH_SYSTEM_SUMMARY.md  BOT_READINESS_AUDIT_2026-02-28.md  CLEANUP_INVENTORY_2026-05-19.md  CURRENT_PROJECT_ANALYSIS_2026-05-06.md  GITHUB_FETCH_DISCOVERY.md  INTENT_TO_OUTCOME_IMPLEMENTATION_PLAN.md  INTENT_TO_OUTCOME_MANIFEST.md  MODULE_CONTRACT_V1.md  MODULE_SDK.md  MULTI_AGENT_DISCOVERY.md  MULTI_USER_SESSION_DISCOVERY.md  NEOEATS_PUBLIC_AND_REAL_DATA_READINESS_2026-05-06.md  NEOEATS_TECH_SPEC.md  NMIAI_GROCERY_BOT_IMPLEMENTATION_REPORT.md  NMIAI_GROCERY_BOT_MAX_SCORE_PUSH.md  PHASE_0_STABILIZATION.md  PHASE_2_COMPLETION.md  PHASE_3_COMPLETION.md  PHASE_4_COMPLETION.md  PHASE_5_COMPLETION.md  PHOTO_EDITING_DELIVERY_SUMMARY.md  PHOTO_EDITING_IMPLEMENTATION.md  PHOTO_EDITING_INDEX.md  PHOTO_EDITING_QUICK_START.md  PHOTO_EDITING_START_HERE.md  PHOTO_EDITING_VERIFICATION.md  PLATFORM_ROADMAP.md  PORTFOLIO_DEMO_RUNBOOK_RU.md  PORTFOLIO_GITHUB_BRIEF.md  PRODUCT_AUDIT_2026-03-31.md  PROJECT_CLASSIFICATION_2026-05-19.md  PROJECT_OUTLOOK_AND_NEXT_STEPS_2026-05-06.md  PUBLIC_RUNTIME_RUNBOOK_2026-05-19.md  PUBLISH_CHECKLIST.md  PhotoUploadComponent.tsx  (+17 more)
migrations/: add_saga_correlation_id.sql  env.py
modules/: general_assistant.yaml  job_scorer.yaml  market_scanner.yaml  notification_block.yaml
monitoring/: alert_rules.yml  alertmanager.yml  grafana_dashboards_seed_server.json  prometheus.yml  statsd.conf
(+1002 files in other folders)
