[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seed-server"
version = "0.5.0"
description = "FastAPI AI orchestration backend with saga workflows, NeoEats domain APIs, and a React Saga Console"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }

dependencies = [
  "fastapi==0.110.0",
  "uvicorn[standard]==0.29.0",
  "pydantic==2.6.4",
  "httpx[http2]==0.27.0",
  "redis==5.0.8",
  "python-multipart>=0.0.9",
  "prometheus-client==0.20.0",
  "python-json-logger==2.0.7",
  "PyYAML==6.0.1",
  "alembic>=1.13.1",
  "SQLAlchemy>=2.0,<2.1",
  "PyJWT>=2.8.0",
  "asyncpg>=0.29.0",
  "psycopg2-binary>=2.9.7",
  "google-genai>=0.8.0,<0.9.0",
  "jsonschema>=4.22.0",
]

[project.optional-dependencies]
dev = [
  "black==24.1.1",
  "flake8==7.0.0",
  "pylint==3.0.3",
  "mypy==1.8.0",
  "isort==5.13.2",
  "pytest==8.4.2",
  "pytest-asyncio==0.24.0",
  "pytest-cov==4.1.0",
  "pytest-mock==3.12.0",
  "pytest-timeout==2.2.0",
  "coverage[toml]==7.4.0",
  "httpx-ws==0.6.0",
  "asgi-lifespan==2.1.0",
  "requests==2.32.3",
  "wsproto==1.2.0",
  "bandit[toml]==1.7.6",
  "pip-audit==2.7.0",
  "detect-secrets==1.4.0",
  "mutmut==2.4.4",
  "pip-licenses==4.3.4",
  "pre-commit==3.6.0",
]

test = [
  "pytest==8.4.2",
  "pytest-asyncio==0.24.0",
  "pytest-cov==4.1.0",
  "pytest-mock==3.12.0",
  "pytest-timeout==2.2.0",
  "coverage[toml]==7.4.0",
  "httpx-ws==0.6.0",
  "asgi-lifespan==2.1.0",
  "requests==2.32.3",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.isort]
profile = "black"
line_length = 120
skip_glob = ["migrations/*", "*/__pycache__/*"]

[tool.bandit]
exclude_dirs = ["tests", "migrations", "scripts"]
skips = [
  "B101",  # assert used in test helpers imported by app code
  "B324",  # SHA1/MD5 are used only for deterministic IDs and rollout buckets
]

[tool.mypy]
ignore_missing_imports = true
no_strict_optional = true
allow_untyped_defs = true
warn_unused_configs = true
exclude = ["migrations", "tests"]

[tool.coverage.run]
source = ["app"]
omit = ["app/__pycache__/*", "app/**/test_*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
